--- a/aboutme.css
+++ b/aboutme.css
@@ -46,10 +46,11 @@
 
 .menu ul li a{
     text-decoration: none;
-    color: #D5D8DC;
+    color: #16A085;
     font-weight: bold;
     transition: 0.4s ease-in-out;
     text-align: left;
+    font-size: 20px;
 }
 
 .menu ul li a:hover{
