just one effect looks good

--- a/home.css
+++ b/home.css
@@ -128,7 +128,7 @@
     #ff1361 67%,
     #fff800 100%
   );
-  font-family: MuseoRegular,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",serif;
+  font-family: "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", serif;
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
